--- a/_config.yml
+++ b/_config.yml
@@ -29,13 +29,13 @@ projects:
 
 # social_media:
   # behance: your_username
-  # dribbble: your_username
-  # facebook: your_username
-  # linkedin: your_username
+  # dribbble: firzandz
+  # facebook: fearzandi.aulia
+  # linkedin: firzandz
   # medium: @your_username
   # stackoverflow: your_user_id
   # telegram: your_username
-  # twitter: your_username
+  # twitter: iamfirzan
   # youtube: your_username
   # vk: your_username
 
