--- a/_config.yml
+++ b/_config.yml
@@ -26,16 +26,15 @@ projects:
     forks: true
     projects:
     # - repo-name
-
-# social_media:
+social_media:
   # behance: your_username
-  # dribbble: firzandz
-  # facebook: fearzandi.aulia
-  # linkedin: firzandz
+  dribbble: firzandz
+  facebook: fearzandi.aulia
+  linkedin: firzandz
   # medium: @your_username
   # stackoverflow: your_user_id
   # telegram: your_username
-  # twitter: iamfirzan
+  twitter: iamfirzan
   # youtube: your_username
   # vk: your_username
 
